# poke-battle-sim-redux

./: .gitignore  pyproject.toml
poke_battle_sim/: __init__.py  poke_sim.py
poke_battle_sim/conf/: global_data.py  global_settings.py
poke_battle_sim/const/: ability_enum.py  effect_mapping.py  gender.py  items.py  move_effects.py  stat.py  status.py  type_enum.py
poke_battle_sim/core/: battle.py  battlefield.py  move.py  pokemon.py  trainer.py
poke_battle_sim/util/: process_ability.py  process_item.py  process_move.py
poke_battle_sim/util/move_logic/: __init__.py  _calculate_crit.py  _calculate_damage.py  _calculate_hit_or_miss.py  _calculate_type_ef.py  _ef_001.py  _ef_004.py  _ef_006.py  _ef_007.py  _ef_009.py  _ef_010.py  _ef_011.py  _ef_013.py  _ef_014.py  _ef_016.py  _ef_017.py  _ef_018.py  _ef_019.py  _ef_020.py  _ef_021.py  _ef_022.py  _ef_023.py  _ef_024.py  _ef_025.py  _ef_026.py  _ef_027.py  _ef_028.py  _ef_029.py  _ef_030.py  _ef_031.py  _ef_032.py  _ef_033.py  _ef_034.py  _ef_035.py  _ef_036.py  _ef_037.py  _ef_038.py  _ef_039.py  _ef_040.py  _ef_041.py  (+431 more)
